--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
   <!-- <script type="text/javascript" src="assets/js/jquery.js"></script> -->
 
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAknWQFyVH1RpR2OAL0vRTHTapaIpfKSqo&libraries=places" type="text/javascript"></script> -->
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAknWQFyVH1RpR2OAL0vRTHTapaIpfKSqo&libraries=places" async defer></script>
+  <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAknWQFyVH1RpR2OAL0vRTHTapaIpfKSqo&libraries=places" async defer></script> -->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr1MuAvI3b3nvg_WONnOMLf7aLjPm3lC4" async defer></script>
+  
   
   <app-root></app-root>  
-<script src="runtime-es2015.99edd73a124a2a0ab3de.js" type="module"></script><script src="runtime-es5.99edd73a124a2a0ab3de.js" nomodule defer></script><script src="polyfills-es5.96d6e807c629da26673e.js" nomodule defer></script><script src="polyfills-es2015.3bfa7f4efadcece3ff0b.js" type="module"></script><script src="main-es2015.52a36b0c2886ac97ee53.js" type="module"></script><script src="main-es5.52a36b0c2886ac97ee53.js" nomodule defer></script></body>
+<script src="runtime-es2015.29e02bee990f4d6f6cb5.js" type="module"></script><script src="runtime-es5.29e02bee990f4d6f6cb5.js" nomodule defer></script><script src="polyfills-es5.96d6e807c629da26673e.js" nomodule defer></script><script src="polyfills-es2015.3bfa7f4efadcece3ff0b.js" type="module"></script><script src="main-es2015.eabc1d681d40ab9b8756.js" type="module"></script><script src="main-es5.eabc1d681d40ab9b8756.js" nomodule defer></script></body>
 </html>
