--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="msapplication-tap-highlight" content="no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <base href="/">
   
   <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/util.css">
@@ -48,7 +50,6 @@
   <!-- <meta name="apple-mobile-web-app-title" content="Papaya Restobar"> -->
 
   <title>Papaya Comercio</title>
-  <base href="./">
 <link rel="stylesheet" href="styles.75b077c1c69445105c2c.css"></head>
 <body>  
   <!-- <script type="text/javascript" src="assets/js/sw-push.js"></script> -->
